[@mantine/core] Combobox: Fix `rightSection` and `leftSection` nor being visible on `Combobox.Search` (#5368)

--- a/packages/@mantine/core/src/components/Combobox/Combobox.module.css
+++ b/packages/@mantine/core/src/components/Combobox/Combobox.module.css
@@ -66,7 +66,6 @@
   margin-bottom: var(--_combobox-padding);
   background-color: var(--_search_background);
   position: relative;
-  z-index: 1000;
 
   &,
   &:focus {
